[REFACTOR] Improve some helpers